--- a/priv/static/pluggy.css
+++ b/priv/static/pluggy.css
@@ -1,3 +1,19 @@
 body {
-	background-color: peachpuff;
+  background-color: brown;
 }
+
+body h1 {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: lightcoral;
+}
+/*# sourceMappingURL=pluggy.css.map */
