--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -37,6 +37,10 @@ body{
         input::placeholder{
             color: blue;
         }
+
+        button{
+            background-color: lightblue;
+        }
     }
 
 }
