--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -1,4 +1,4 @@
-
+$main-font: 'Roboto', cursive;
 
 body{
     margin: 0;
@@ -12,7 +12,7 @@ body{
 }
 
 .wrapper.user_login{
-    background-color: white;
+    background-color: #f1f1e8;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,25 +21,58 @@ body{
     h1{
         width: fit-content;
         height: fit-content;
-        color: lightblue;
+        color: #81b214;
     }
 
     form{
         width: 50vw;
-        input{
-            width: 100%;
-            height: 50px;
-            background-color: lightblue;
-            border-radius: 5px;
-            border: solid blue 2px;
+
+
+        .input_field:nth-of-type(1){
+            margin-bottom: 3vh;
         }
-    
-        input::placeholder{
-            color: blue;
+
+        .input_field{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50px;
+            i.material-icons{
+                height: 100%;
+                width: 50px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #bfdcae;
+                color: white;
+            }
+
+            input:focus{
+                outline: none;
+            }
+
+            input{
+                width: calc(100% - 15px);
+                height: 100%;
+                background-color: #bfdcae;
+                border: none;
+                padding: 0 0 0 15px
+            }
+        
+            input::placeholder{
+                color: white;
+            }
         }
 
         button{
-            background-color: lightblue;
+            background-color: #81b214;
+            width: 75%;
+            margin: 0 12.5% 0 12.5%;
+            margin-top: 2.5vh;
+            height: 5vh;
+            border-radius: 5px;
+            font-family: $main-font;
+            font-size: 2em;
         }
     }
 
