--- a/priv/static/pluggy.css
+++ b/priv/static/pluggy.css
@@ -111,4 +111,173 @@ body {
   font-family: "Roboto", cursive;
   font-size: 2em;
 }
+
+.wrapper.admin_groups main.admin_groups {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 90vh;
+}
+
+.wrapper.admin_groups main.admin_groups h1 {
+  margin: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  font-family: "Roboto", cursive;
+  color: #81b214;
+}
+
+.wrapper.admin_groups main.admin_groups h1.title {
+  margin: 5vh 0 2.5vh 0;
+  font-size: 2em;
+}
+
+.wrapper.admin_groups main.admin_groups h1.groups {
+  margin: 0 0 2.5vh 0;
+  font-size: 1.5em;
+}
+
+.wrapper.admin_groups main.admin_groups main.specified_groups {
+  width: 80vw;
+  margin: 0 10vw 0 10vw;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.wrapper.admin_groups main.admin_groups main.specified_groups aside.group {
+  width: 15vw;
+  height: 15vw;
+  background-color: #bfdcae;
+  margin: 2vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 75% 25%;
+      grid-template-rows: 75% 25%;
+  font-family: "Roboto", cursive;
+}
+
+.wrapper.admin_groups main.admin_groups main.specified_groups aside.group h2 {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  color: white;
+}
+
+.wrapper.admin_groups main.admin_groups main.specified_groups aside.group .lower {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-color: #81b214;
+}
+
+.wrapper.admin_groups main.admin_groups main.specified_groups aside.group .lower p {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+
+header {
+  height: 10vh;
+  width: calc(100vw - 20vw);
+  padding: 0 10vw 0 10vw;
+  background-color: #81b214;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Roboto", cursive;
+}
+
+header h1 {
+  margin: 0;
+  color: white;
+}
+
+header i.material-icons {
+  margin: 0 2vw 0 auto;
+  color: white;
+  font-size: 2em;
+}
+
+header .name_box, header .user_action {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: calc(100% - 5vh);
+  padding: 1.5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+}
+
+header .name_box h3, header .user_action h3 {
+  margin: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+header .user_action h3 {
+  color: white;
+}
+
+header .name_box {
+  background-color: #bfdcae;
+  color: white;
+}
 /*# sourceMappingURL=pluggy.css.map */
