--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -77,3 +77,28 @@ body{
     }
 
 }
+
+.wrapper.admin{
+
+width: 100%;
+height: 400px;
+background-color: #81b214;
+
+    .school {
+        width: 200px;
+        height: 100px;
+        background-color: red;
+        margin-left: 400px;
+
+
+    button {
+            background-color: blue;
+            border: 0px;
+            width: 50%;
+            height: 33%;
+            margin-bottom: 0px;
+            
+        }
+    }   
+
+}
