--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -80,10 +80,9 @@ body{
 
 
 .wrapper.admin{
-
-width: 100%;
-height: 400px;
-background-color: #81b214;
+    width: 100%;
+    height: 400px;
+    background-color: #81b214;
 
     .school {
         width: 200px;
@@ -91,19 +90,18 @@ background-color: #81b214;
         background-color: red;
         margin-left: 400px;
 
-
-    button {
+        button{
             background-color: blue;
             border: 0px;
             width: 50%;
             height: 33%;
             margin-bottom: 0px;
-            
-        }
-    }   
+        }   
+    }
+}
 
-.wrapper.admin_groups{
-    main.admin_groups{
+.wrapper.general{
+    main.general{
         display: flex;
         // justify-content: center;
         align-items: center;
@@ -135,13 +133,26 @@ background-color: #81b214;
             flex-wrap: wrap;
 
             aside.group{
-                width: 15vw;
-                height: 15vw;
+                width: 200px;
+                height: 200px;
                 background-color:  #bfdcae;
                 margin: 2vw;
                 display: grid;
                 grid-template-rows: 75% 25%;
                 font-family: $main-font;
+
+                h1{
+                    grid-row: span 2;
+                    height: 100%;
+                    width: 100%;
+                    color: white;
+                    font-size: 2em;
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
                 h2{
                     height: 100%;
                     width: 100%;
@@ -223,4 +234,35 @@ header{
         background-color: #bfdcae;
         color: white;
     }
+}
+
+main.school_popup{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    background-color: rgba(0,0,0,0.25);
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    form{
+        width: 20%;
+        height: 20%;
+        background-color: white;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
+.blurred{
+    filter: blur(1px);
+}
+
+.hidden{
+    visibility: hidden !important;
+    display: none !important;
 }
