--- a/priv/static/pluggy.css
+++ b/priv/static/pluggy.css
@@ -145,6 +145,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 90vh;
+  font-family: "Roboto", cursive;
 }
 
 .wrapper.general main.general h1 {
@@ -155,7 +156,6 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  font-family: "Roboto", cursive;
   color: #81b214;
 }
 
@@ -231,7 +231,8 @@ body {
   background-color: #81b214;
 }
 
-.wrapper.general main.general main.specified_groups aside.group .lower p, .wrapper.general main.general main.specified_groups aside.teacher_group .lower p {
+.wrapper.general main.general main.specified_groups aside.group .lower a, .wrapper.general main.general main.specified_groups aside.group .lower button, .wrapper.general main.general main.specified_groups aside.teacher_group .lower a, .wrapper.general main.general main.specified_groups aside.teacher_group .lower button {
+  text-decoration: none;
   width: 50%;
   height: 100%;
   display: -webkit-box;
@@ -244,6 +245,10 @@ body {
       -ms-flex-align: center;
           align-items: center;
   color: white;
+  border: none;
+  background-color: transparent;
+  font-family: "Roboto", cursive;
+  font-size: 1.1em;
 }
 
 .wrapper.general main.general main.specified_groups aside.group {
@@ -347,47 +352,6 @@ main.school_popup {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-main.teacher_popup {
-
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.25);
-  top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-
-}
-
-main.teacher_popup form {
-
-  width: 20%;
-  height: 20%;
-  background-color: white;
-  border-radius: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-
 }
 
 main.school_popup form {
