--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -107,11 +107,11 @@ body{
         align-items: center;
         flex-direction: column;
         height: 90vh;
+        font-family: $main-font;
         h1{
             margin: 0;
             width: fit-content;
             height: fit-content;
-            font-family: $main-font;
             color: #81b214;
         }
 
@@ -134,6 +134,7 @@ body{
 
 
             aside.group, aside.teacher_group{
+                
                 h1{
                     grid-row: span 2;
                     height: 100%;
@@ -164,13 +165,18 @@ body{
                     background-color: #81b214;
                 
 
-                    p{
+                    a, button{
+                        text-decoration: none;
                         width: 50%;
                         height: 100%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         color: white;
+                        border: none;
+                        background-color: transparent;
+                        font-family: $main-font;
+                        font-size: 1.1em;
                     }
                 }
            }
@@ -197,8 +203,6 @@ body{
         }
     }
 }
-
-
 
 header{
     height: 10vh;
