--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -251,7 +251,7 @@ header{
     }
 }
 
-main.school_popup{
+main.school_popup, main.teacher_popup{
     height: 100vh;
     width: 100vw;
     position: absolute;
