--- a/priv/static/pluggy.css
+++ b/priv/static/pluggy.css
@@ -180,6 +180,66 @@ body {
       flex-wrap: wrap;
 }
 
+.wrapper.general main.general main.specified_groups aside.two_buttons {
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.wrapper.general main.general main.specified_groups aside.two_buttons aside.top {
+  width: 100%;
+  height: 40%;
+  background-color: #bfdcae;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  top: 0px;
+}
+
+.wrapper.general main.general main.specified_groups aside.two_buttons aside.bot {
+  width: 100%;
+  height: 40%;
+  background-color: #bfdcae;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wrapper.general main.general main.specified_groups aside.two_buttons h1 {
+  grid-row: span 2;
+  height: 100%;
+  width: 100%;
+  color: white;
+  font-size: 2em;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .wrapper.general main.general main.specified_groups aside.group h1, .wrapper.general main.general main.specified_groups aside.teacher_group h1 {
   grid-row: span 2;
   height: 100%;
@@ -270,6 +330,18 @@ body {
   font-family: "Roboto", cursive;
 }
 
+.wrapper.general main.general main.specified_groups aside.admin_group {
+  width: 200px;
+  height: 200px;
+  background-color: #bfdcae;
+  margin: 2vw;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 75% 25%;
+      grid-template-rows: 75% 25%;
+  font-family: "Roboto", cursive;
+}
+
 header {
   height: 10vh;
   width: calc(100vw - 20vw);
@@ -347,47 +419,6 @@ main.school_popup {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-main.teacher_popup {
-
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.25);
-  top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-
-}
-
-main.teacher_popup form {
-
-  width: 20%;
-  height: 20%;
-  background-color: white;
-  border-radius: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-
 }
 
 main.school_popup form {
