--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -100,6 +100,8 @@ body{
     }
 }
 
+
+
 .wrapper.general{
     main.general{
         display: flex;
@@ -132,6 +134,46 @@ body{
             display: flex;
             flex-wrap: wrap;
 
+            aside.two_buttons{
+             width: 200px;
+             height: 200px;
+             background-color:white;
+             display: flex;
+             flex-direction: column;
+             justify-content: space-between;
+
+                aside.top{
+                    width: 100%;
+                    height: 40%;
+                    background-color: #bfdcae;
+                    display: flex;
+                    justify-content: center;
+                    position: relative;
+                    top: 0px;
+                }
+                aside.bot{
+                    width: 100%;
+                    height: 40%;
+                    background-color: #bfdcae;
+                    display: flex;
+                    justify-content: center;
+                
+                }
+                h1{
+                    grid-row: span 2;
+                    height: 100%;
+                    width: 100%;
+                    color: white;
+                    font-size: 2em;
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                }
+
+            }
+
 
             aside.group, aside.teacher_group{
                 h1{
@@ -145,6 +187,7 @@ body{
                     justify-content: center;
                     align-items: center;
                 }
+            
 
                 h2{
                     height: 100%;
@@ -155,6 +198,8 @@ body{
                     margin: 0;
                     color: white;
                 }
+
+              
 
                 .lower{
                     display: flex;
@@ -175,6 +220,8 @@ body{
                 }
            }
 
+           
+
             aside.group{
                 width: 200px;
                 height: 200px;
@@ -193,11 +240,20 @@ body{
                 display: grid;
                 grid-template-rows: 75% 25%;
                 font-family: $main-font; 
+            
+            }
+            aside.admin_group{
+                width: 200px;
+                height: 200px;
+                background-color:  #bfdcae;
+                margin: 2vw;
+                display: grid;
+                grid-template-rows: 75% 25%;
+                font-family: $main-font;
             }
         }
     }
 }
-
 
 
 header{
@@ -281,3 +337,5 @@ main.school_popup{
     visibility: hidden !important;
     display: none !important;
 }
+
+
