--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -141,7 +141,7 @@ body{
              display: flex;
              flex-direction: column;
              justify-content: space-between;
-
+             margin: 2vw;
                 aside.top{
                     width: 100%;
                     height: 40%;
