--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -160,6 +160,7 @@ body{
                 
                 }
                 h1{
+                    font-family: $main-font;
                     grid-row: span 2;
                     height: 100%;
                     width: 100%;
@@ -169,7 +170,8 @@ body{
                     display: flex;
                     justify-content: center;
                     align-items: center;
-
+                    background-color: #bfdcae;
+                    border: none;
                 }
 
             }
