--- a/priv/static/pluggy.css
+++ b/priv/static/pluggy.css
@@ -224,6 +224,7 @@ body {
 }
 
 .wrapper.general main.general main.specified_groups aside.two_buttons h1 {
+  font-family: "Roboto", cursive;
   grid-row: span 2;
   height: 100%;
   width: 100%;
@@ -239,6 +240,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #bfdcae;
+  border: none;
 }
 
 .wrapper.general main.general main.specified_groups aside.group h1, .wrapper.general main.general main.specified_groups aside.teacher_group h1 {
