--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -100,8 +100,6 @@ body{
     }
 }
 
-
-
 .wrapper.general{
     main.general{
         display: flex;
@@ -314,7 +312,7 @@ header{
     }
 }
 
-main.school_popup, main.teacher_popup{
+main.school_popup, main.teacher_popup, main.group_popup{
     height: 100vh;
     width: 100vw;
     position: absolute;
