--- a/priv/static/pluggy.scss
+++ b/priv/static/pluggy.scss
@@ -134,6 +134,111 @@ body{
             display: flex;
             flex-wrap: wrap;
 
+            aside.guess{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+
+                h3{
+                    grid-row: span 2;
+                    height: 100%;
+                    width: 100%;
+                    color: #bfdcae;
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                aside.box{
+                    width: 50%;
+                    height: 70%;
+                    display: flex;
+                //    background-color: grey;
+
+                    aside.image_box{
+                        width: 60%;
+                        height: 100%;
+                     //   background-color: plum;
+                        display: flex;
+                        flex-direction: column;
+
+                        aside.image{
+                        width: 100%;
+                        height: 80%;
+                        background-color: green;
+                        border-radius: 3px;
+                        }
+
+                        aside.score{
+                            width: 100%;
+                            height: 20%;
+                        }
+                    }
+               
+                   
+
+                    aside.right{
+                        width: 40%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: column;
+
+                        aside.next_box{
+                            width: 100%;
+                            height: 20%;
+                        //  background-color: silver;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            
+                            aside.next{
+                                width: 90%;
+                                height: 50%;
+                                background-color: #bfdcae;
+                                border-radius: 3px;
+                                h3{color: white}
+                            }
+                        }
+                        
+                        aside.name_box{
+                            width: 100%;
+                            height: 80%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                        //    background-color: seagreen;
+                            align-items: center;
+
+                            aside.name{
+                                width: 90%;
+                                height: 50px;
+                                background-color: #bfdcae;
+                                border-radius: 3px;
+
+                                h5{
+                                    grid-row: span 2;
+                                    height: 100%;
+                                    width: 100%;
+                                    color: white;
+                                    font-size: 20px;
+                                    margin: 0;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                }
+                            }
+                        }
+
+                    }
+                }
+            }
+
+
+
+
+
             aside.two_buttons{
              width: 200px;
              height: 200px;
